# ulm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2025-11-21.md  prd.md  product-brief-ulm-2025-11-20.md  test-design-system.md  traceability-matrix.md
docs/sprint-artifacts/: 1-1-project-initialization.md  1-2-module-structure-setup.md  1-3-cli-argument-parsing.md  1-4-error-handling-infrastructure.md  2-1-ollama-api-client.md  2-2-ollama-detection-health-check.md  2-3-model-verification-pull.md  2-4-manpage-directory-scanner.md  2-5-manpage-content-extraction.md  2-6-embedding-generation.md  2-7-lancedb-storage.md  2-8-setup-orchestration-progress.md  3-1-vector-search.md  3-2-manpage-content-loading.md  3-3-directory-context-scanner.md  3-4-context-builder.md  3-5-prompt-builder.md  3-6-llm-response-parser.md  3-7-query-orchestration.md  4-1-tui-renderer.md  4-2-event-loop-navigation.md  4-3-execute-action.md  4-4-copy-action.md  4-5-edit-action.md  4-6-abort-action.md  4-7-error-display.md  4-8-tui-orchestration.md  5-1-ollama-detection-status.md  5-2-native-ollama-installation.md  5-3-docker-ollama-installation.context.xml  5-3-docker-ollama-installation.md  6-1-fetch-available-models.context.xml  6-1-fetch-available-models.md  6-2-display-model-selection-ui.context.xml  6-2-display-model-selection-ui.md  6-3-model-pull-with-progress.context.xml  6-3-model-pull-with-progress.md  6-4-config-storage.context.xml  6-4-config-storage.md  sprint-status.yaml  (+7 more)
src/: cli.rs  db.rs  error.rs  lib.rs  main.rs
src/exec/: clipboard.rs  edit.rs  mod.rs  shell.rs
src/llm/: mod.rs  ollama.rs  prompt.rs  response.rs
src/query/: context.rs  mod.rs  search.rs
src/setup/: config.rs  index.rs  install.rs  metadata.rs  mod.rs  models.rs  ollama.rs
src/tui/: error.rs  input.rs  mod.rs  render.rs
tests/: cli_test.rs
